--- a/server/docker-compose.yml
+++ b/server/docker-compose.yml
@@ -1,7 +1,7 @@
-version: '3.4'
+version: "3.4"
 
 services:
-    web:
-        build: .
-        volumes:
-            - ./:/var/www
+  web:
+    build: .
+    volumes:
+      - ./:/var/www
