--- a/server/composer.json
+++ b/server/composer.json
@@ -10,7 +10,8 @@
     "minimum-stability": "stable",
     "require": {
         "twig/twig": "^3.5.1",
-        "ext-pdo": "*"
+        "ext-pdo": "*",
+        "symfony/http-client": "^7.0"
     },
     "require-dev": {
         "filp/whoops": "^2.15",
