--- a/server/composer.json
+++ b/server/composer.json
@@ -11,7 +11,7 @@
     "require": {
         "twig/twig": "^3.5.1",
         "ext-pdo": "*",
-        "symfony/http-client": "^7.0"
+        "symfony/http-client": "*"
     },
     "require-dev": {
         "filp/whoops": "^2.15",
